# LabView_PID_sim

./: .gitignore  README.md
DC_motor_sim/: CMakeLists.txt  prj.conf
DC_motor_sim/src/: main.c  uart_handler.c
boards/: nucleo_f446re.overlay
projekt-PID/: PID_Simulator.lvlps  PID_Simulator.lvproj  main.vi
projekt-PID/Controls/: Main_Data.ctl  States.ctl
projekt-PID/VIs/: Arduino_PID_Driver.vi
src/: motor_simulator.c  motor_simulator.h  uart_handler.h
